# AppWebServer

./: .gitignore  CMakeLists.txt  DetectBrowser.cpp  DetectBrowser.hpp  README.md  jrpc.cpp  jrpc.hpp  rc_builder.py  request_response.cpp  request_response.hpp  server.cpp  server.hpp  session.cpp  session.hpp  t.cpp  test.cpp
include/: jrpc.hpp  server.hpp
